--- a/myExpressApp/views/index.ejs
+++ b/myExpressApp/views/index.ejs
@@ -12,5 +12,11 @@
             </li>
         <% } %>
     </ul>
+
+    <% if (username) { %>
+      <<h2>Welcome! <%= username%> (name: <%= name%>)</h2>
+    <%} else { %>
+      <<h2>Please Login.</h2>
+    <% } %>
   </body>
 </html>
